# Raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_script.sh  glass.cfg  main.cpp  small.cfg  test.cfg  testerMaterial.cfg
RayTracer/: Ray.cpp  Ray.hpp
RayTracer/Ray/: Ray.hpp
RayTracer/Rectangle/: Rectangle.hpp
RayTracer/Sphere/: Sphere.cpp  Sphere.hpp
demo/: axe.cfg  difficulty.cfg  feat.cfg  mirrorroom.cfg  optical.cfg  scene.cfg  tetris.cfg  tranparent.cfg  trello.cfg
docs/: CFG.md  technical.md
math/Point3D/: Point3D.cpp  Point3D.hpp
math/Vector3D/: Vector3D.cpp  Vector3D.hpp
scene/: 3Spheres.cfg
scenes/: Mincraft.cfg  axe.cfg  box.cfg  context.cfg  cube.cfg  key.cfg  multiple.cfg  must.cfg  optical.cfg  orga.cfg  piece.cfg  point.cfg  raytracer.cfg  scene.cfg  should.cfg  small.cfg  tetris.cfg  title.cfg  tranparent.cfg
src/: main.cpp
src/Core/: Core.cpp  Core.hpp
src/Core/LibLoader/: LibLoader.cpp  LibLoader.hpp  LibraryObject.cpp  LibraryObject.hpp
src/Factory/: Factory.hpp
src/Factory/LightFactory/: LightFactory.cpp  LightFactory.hpp
src/Factory/PrimitiveFactory/: PrimitiveFactory.cpp  PrimitiveFactory.hpp
src/Interface/: ICamera.hpp  ILight.hpp  IMaterial.hpp  IPrimitive.hpp  IRenderer.hpp
src/Plugins/Camera/: Camera.cpp  Camera.hpp
src/Plugins/Light/: ALight.hpp
src/Plugins/Light/AmbientLight/: AmbientLight.cpp  AmbientLight.hpp
src/Plugins/Light/DirectionnalLight/: DirectionnalLight.cpp  DirectionnalLight.hpp
src/Plugins/Light/PointLight/: PointLight.cpp  PointLight.hpp
src/Plugins/Material/Checkboard/: Checkboard.cpp  Checkboard.hpp
src/Plugins/Material/FlatColor/: FlatColor.cpp  FlatColor.hpp
src/Plugins/Material/Glass/: Glass.cpp  Glass.hpp
src/Plugins/Material/Gradient/: Gradient.cpp  Gradient.hpp
src/Plugins/Material/Mirror/: Mirror.cpp  Mirror.hpp
src/Plugins/Material/Perlin/: Perlin.cpp  Perlin.hpp
src/Plugins/Material/Transparent/: Transparent.cpp  Transparent.hpp
src/Plugins/Plane/: Rectangle.cpp  Rectangle.hpp
src/Plugins/Primitives/: APrimitives.hpp
src/Plugins/Primitives/Cone/: Cone.cpp  Cone.hpp
src/Plugins/Primitives/Cube/: Cube.cpp  Cube.hpp
src/Plugins/Primitives/Cylinder/: Cylinder.cpp  Cylinder.hpp
src/Plugins/Primitives/LimitedCone/: LimitedCone.cpp  LimitedCone.hpp
src/Plugins/Primitives/LimitedCylinder/: LimitedCylinder.cpp  LimitedCylinder.hpp
src/Plugins/Primitives/Plane/: Plane.cpp  Plane.hpp
src/Plugins/Primitives/Sphere/: Sphere.cpp  Sphere.hpp
src/Plugins/Primitives/Torus/: Torus.cpp  Torus.hpp
src/Plugins/Primitives/Triangles/: Triangles.cpp  Triangles.hpp
src/Plugins/Renders/: IRenderer.hpp
src/Plugins/Renders/SFML/: SFMLRenderer.cpp  SFMLRenderer.hpp
src/Plugins/Sphere/: Sphere.cpp  Sphere.hpp
src/RayTracer/Builder/: sceneBuilder.cpp  sceneBuilder.hpp
src/RayTracer/Camera/: Camera.cpp  Camera.hpp
src/RayTracer/LightManager/: LightManager.cpp  LightManager.hpp
src/RayTracer/Parser/: Parser.cpp  Parser.hpp
src/RayTracer/Ray/: Ray.cpp  Ray.hpp
src/RayTracer/Scene/: Scene.cpp  Scene.hpp
src/Shared/: LibraryType.hpp
src/Tools/AABB/: AABB.cpp  AABB.hpp
src/Tools/BVH/AABB/: AABB.cpp  AABB.hpp
src/Tools/BVH/BVHNode/: BVHNode.cpp  BVHNode.hpp
src/Tools/Color/: Color.hpp
src/Tools/ConfigNode/: ConfigNode.cpp  ConfigNode.hpp
src/Tools/HitRecord/: HitRecord.hpp
src/Tools/Math/Matrix/: Matrix.hpp  TransformMatrix.cpp  TransformMatrix.hpp
src/Tools/Math/Point3D/: Point3D.cpp  Point3D.hpp
src/Tools/Math/Vector3D/: Vector3D.cpp  Vector3D.hpp
src/Tools/Ray/: Ray.cpp  Ray.hpp
tests/: testcopy.cpp
